--- a/AFET.html
+++ b/AFET.html
@@ -20,9 +20,9 @@
                     </div>
                 </div>
                 <div class="navbar-container flex-container link-container">
-                    <div class="nav-link active"><a href="index.html">Home</a></div>
+                    <div class="nav-link"><a href="index.html">Home</a></div>
                     <div class="nav-link"><a href="#schedule">Schedule</a></div>
-                    <div class="nav-link dropdown">
+                    <div class="nav-link dropdown active">
                         <a href="#committees">Commmittees <span class="fa fa-angle-down"></span></a>
                         <div class="dropdown-container">
                             <a href="UNHRC.html">UNHRC</a>
@@ -56,7 +56,7 @@
 
     <header>
         <div class="special-heading-container" id="main">
-            <img src="./assets/Logo_AFET_tbg.png" alt="UNHRC">
+            <img src="./assets/Logo_AFET_tbg.png" alt="AFET">
             <p class="main-heading">AFET</p>
             <p class="main-subheading">The Chinese Investment in Europe Under BRI</p>
         </div>
