--- a/UNHRC.html
+++ b/UNHRC.html
@@ -22,7 +22,7 @@
                 <div class="navbar-container flex-container link-container">
                     <div class="nav-link active"><a href="index.html">Home</a></div>
                     <div class="nav-link"><a href="#schedule">Schedule</a></div>
-                    <div class="nav-link dropdown">
+                    <div class="nav-link dropdown active">
                         <a href="#committees">Commmittees <span class="fa fa-angle-down"></span></a>
                         <div class="dropdown-container">
                             <a href="UNHRC.html">UNHRC</a>
