--- a/CIA.html
+++ b/CIA.html
@@ -22,7 +22,7 @@
                 <div class="navbar-container flex-container link-container">
                     <div class="nav-link active"><a href="index.html">Home</a></div>
                     <div class="nav-link"><a href="#schedule">Schedule</a></div>
-                    <div class="nav-link dropdown">
+                    <div class="nav-link dropdown active">
                         <a href="#committees">Commmittees <span class="fa fa-angle-down"></span></a>
                         <div class="dropdown-container">
                             <a href="UNHRC.html">UNHRC</a>
@@ -56,7 +56,7 @@
 
     <header>
         <div class="special-heading-container" id="main">
-            <img src="./assets/Logo_CIA_tbg.png" alt="UNHRC">
+            <img src="./assets/Logo_CIA_tbg.png" alt="CIA">
             <p class="main-heading">CIA Crisis Committee</p>
             <p class="main-subheading">Discussion on Allende's Socialist Measures in 1973</p>
         </div>
