--- a/CIA.html
+++ b/CIA.html
@@ -20,8 +20,7 @@
                     </div>
                 </div>
                 <div class="navbar-container flex-container link-container">
-                    <div class="nav-link active"><a href="index.html">Home</a></div>
-                    <div class="nav-link"><a href="#schedule">Schedule</a></div>
+                    <div class="nav-link"><a href="index.html">Home</a></div>
                     <div class="nav-link dropdown active">
                         <a href="#committees">Commmittees <span class="fa fa-angle-down"></span></a>
                         <div class="dropdown-container">
@@ -32,9 +31,7 @@
                             <a href="CIA.html">CIA Crisis Committee</a>
                         </div>
                     </div>
-                    <div class="nav-link"><a href="#fourth-estate">Fourth Estate</a></div>
-                    <div class="nav-link"><a href="csoon.html">Secretariat</a></div>
-                    <div class="nav-link"><a href="csoon.html">Registration</a></div>
+                    
                 </div>
                 <div class="responsive-navbar">
                     <i class="fa fa-bars"></i>
