--- a/UNHRC.html
+++ b/UNHRC.html
@@ -55,8 +55,8 @@
         <div class="special-heading-container" id="main">
             <img src="./assets/Logo_UNHRC_tbg.png" alt="UNHRC">
             <p class="main-heading">UNHRC</p>
-            <p class="main-subheading">All India Political Parties MeThe Ethics of Intervention with Special Emphasis on
-                Military Interventionet</p>
+            <p class="main-subheading">The Ethics of Intervention with Special Emphasis on
+                Military Intervention</p>
         </div>
 
     </header>
