--- a/UNHRC.html
+++ b/UNHRC.html
@@ -13,50 +13,50 @@
 <body>
     <nav>
         <section id="navbar" class="section">
-            <div class="navbar">
-                <div class="navbar-container flex-container logo-container">
-                    <div class="logo">
-                        <img src="https://i.imgur.com/2kAWdiX.png" alt="">
-                    </div>
-                </div>
-                <div class="navbar-container flex-container link-container">
-                    <div class="nav-link"><a href="index.html">Home</a></div>
-                    <div class="nav-link dropdown active">
-                        <a href="#committees">Commmittees <span class="fa fa-angle-down"></span></a>
-                        <div class="dropdown-container">
-                            <a href="UNHRC.html">UNHRC</a>
-                            <a href="csoon.html">UNHSC</a>
-                            <a href="csoon.html">AIPPM</a>
-                            <a href="AFET.html">AFET</a>
-                            <a href="CIA.html">CIA Crisis Committee</a>
-                        </div>
-                    </div>
-                
-                </div>
-                <div class="responsive-navbar">
-                    <i class="fa fa-bars"></i>
-                </div>
+          <div class="navbar">
+            <div class="navbar-container flex-container logo-container">
+              <div class="logo">
+            <img src="https://i.imgur.com/2kAWdiX.png" alt="">
+              </div>
             </div>
+            <div class="navbar-container flex-container link-container">
+              <div class="nav-link"><a href="index.html">Home</a></div>
+              <div class="nav-link"><a href="index.html">Schedule</a></div>
+              <div class="nav-link dropdown active">
+                <a href="#committees">Commmittees <span class="fa fa-angle-down"></span></a>
+                <div class="dropdown-container">
+                  <a href="UNHRC.html">UNHRC</a>
+                  <a href="csoon.html">UNHSC</a>
+                  <a href="csoon.html">AIPPM</a>
+                  <a href="AFET.html">AFET</a>
+                  <a href="CIA.html">CIA Crisis Committee</a>
+                </div>
+              </div>
+              <div class="nav-link"><a href="index.html">Fourth Estate</a></div>
+              <div class="nav-link"><a href="csoon.html">Secretariat</a></div>
+              <div class="nav-link"><a href="csoon.html">Registration</a></div>
+            </div>
+            <div class="responsive-navbar">
+              <i class="fa fa-bars"></i>
+            </div>
+          </div>
         </section>
-    </nav>
-    <div class="rnavbar-container">
+      </nav>
+      <div class="rnavbar-container">
         <div class="rlink-container">
-            <div class="rnav-link"><a href="#home">Home</a></div>
-            <div class="rnav-link"><a href="#schedule">Schedule</a></div>
-            <div class="rnav-link"><a href="#addressals">About</a></div>
-            <div class="rnav-link"><a href="#committees">Committees</a></div>
-            <div class="rnav-link"><a href="#fourth-estate">Fourth Estate</a></div>
+          <div class="rnav-link"><a href="index.html">Home</a></div>
+          <div class="rnav-link"><a href="index.html">Schedule</a></div>
+          <div class="rnav-link"><a href="index.html">About</a></div>
+          <div class="rnav-link"><a href="index.html">Committees</a></div>
+          <div class="rnav-link"><a href="index.html">Fourth Estate</a></div>
         </div>
-    </div>
-
+      </div>
 
 
     <header>
         <div class="special-heading-container" id="main">
             <img src="./assets/Logo_UNHRC_tbg.png" alt="UNHRC">
             <p class="main-heading">UNHRC</p>
-            <p class="main-subheading">The Ethics of Intervention with Special Emphasis on
-                Military Intervention</p>
         </div>
 
     </header>
