--- a/CIA.html
+++ b/CIA.html
@@ -59,6 +59,7 @@
         <div class="special-heading-container" id="main">
             <img src="./assets/Logo_CIA_tbg.png" alt="CIA">
             <p class="main-heading">CIA Crisis Committee</p>
+            <p>Discussion on Allende’s Socialist Measures in 1973</p>
         </div>
 
     </header>
