--- a/UNHRC.html
+++ b/UNHRC.html
@@ -57,6 +57,7 @@
         <div class="special-heading-container" id="main">
             <img src="./assets/Logo_UNHRC_tbg.png" alt="UNHRC">
             <p class="main-heading">UNHRC</p>
+            <p class="main-subheading">The Ethics of Intervention with Special Emphasis on Military Intervention</p>
         </div>
 
     </header>
