--- a/AFET.html
+++ b/AFET.html
@@ -56,11 +56,12 @@
     <header>
         <div class="special-heading-container" id="main">
             <img src="./assets/Logo_AFET_tbg.png" alt="AFET">
-            <p class="main-heading">AFET</p>
-            <p>The Chinese Investment in Europe Under BRI</p>
+            <p class="main-headingG">AFET</p>
+            <p class="main-subheading green">European Parliament's Committee on Foreign Affairs</p>
         </div>
-
     </header>
+
+
 
     <section id="text">
         <div class="info-container">
@@ -86,9 +87,9 @@
                 <div class="heading-container">
                     <span class="common-heading">Resources</span>
                 </div>
-                <button><a href="" target="_blank">Matrix</a></button>
-                <button><a href="" target="_blank">Reading List</a></button>
-                <button><a href="" target="_blank">Background Guide</a></button>
+                <button class="btn-1"><a href="" target="_blank">Matrix</a></button>
+                <button class="btn-2"><a href="" target="_blank">Reading List</a></button>
+                <button class="btn-3"><a href="" target="_blank">Background Guide</a></button>
             </div>
         </div>
     </section>
@@ -100,30 +101,6 @@
             <h3>Website made by Aabir Fauzan, Arjun Suri, and Anhad Ajit Singh Beri</h3>
     </footer>
 </body>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
-<script>
-    VANTA.BIRDS({
-        el: "#main",
-        mouseControls: false,
-        touchControls: false,
-        gyroControls: false,
-        minHeight: 200.00,
-        minWidth: 200.00,
-        scale: 1.00,
-        scaleMobile: 1.00,
-        color1: 0x6b28,
-        color2: 0xa72559,
-        birdSize: 2.30,
-        wingSpan: 28.00,
-        speedLimit: 2.00,
-        separation: 95.00,
-        alignment: 21.00,
-        cohesion: 40.00,
-        quantity: 3.00
-    })
-</script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="js/responsive.js"></script>
