--- a/CIA.html
+++ b/CIA.html
@@ -52,14 +52,11 @@
         </div>
       </div>
 
-
-
-
     <header>
         <div class="special-heading-container" id="main">
             <img src="./assets/Logo_CIA_tbg.png" alt="CIA">
-            <p class="main-heading">CIA Crisis Committee</p>
-            <p>Discussion on Allende’s Socialist Measures in 1973</p>
+            <p class="main-headingP">CIA</p>
+            <p class="main-subheading purple">CIA Cabinet Crisis Committee</p>
         </div>
 
     </header>
@@ -87,9 +84,9 @@
                 <div class="heading-container">
                     <span class="common-heading">Resources</span>
                 </div>
-                <button><a href="" target="_blank">Matrix</a></button>
-                <button><a href="" target="_blank">Reading List</a></button>
-                <button><a href="" target="_blank">Background Guide</a></button>
+                <button class="btn-1"><a href="" target="_blank">Matrix</a></button>
+                <button class="btn-2"><a href="" target="_blank">Reading List</a></button>
+                <button class="btn-3"><a href="" target="_blank">Background Guide</a></button>
             </div>
         </div>
     </section>
@@ -102,29 +99,6 @@
     </footer>
 </body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
-<script>
-    VANTA.BIRDS({
-        el: "#main",
-        mouseControls: false,
-        touchControls: false,
-        gyroControls: false,
-        minHeight: 200.00,
-        minWidth: 200.00,
-        scale: 1.00,
-        scaleMobile: 1.00,
-        color1: 0x1010ff,
-        color2: 0xc3c3c3,
-        birdSize: 2.30,
-        wingSpan: 28.00,
-        speedLimit: 2.00,
-        separation: 95.00,
-        alignment: 21.00,
-        cohesion: 40.00,
-        quantity: 3.00
-    })
-</script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="js/responsive.js"></script>
