--- a/UNHRC.html
+++ b/UNHRC.html
@@ -55,9 +55,9 @@
 
     <header>
         <div class="special-heading-container" id="main">
-            <img src="./assets/Logo_UNHRC_tbg.png" alt="UNHRC">
-            <p class="main-heading">UNHRC</p>
-            <p class="main-subheading">The Ethics of Intervention with Special Emphasis on Military Intervention</p>
+            <img src="./assets/Logo_UNHRC.JPG" class="com-logo" alt="UNHRC">
+            <p class="main-headingB">UNHRC</p>
+            <p class="main-subheading blue">United Nations Human Rights Council</p>
         </div>
 
     </header>
@@ -85,14 +85,12 @@
                 <div class="heading-container">
                     <span class="common-heading">Resources</span>
                 </div>
-                <button><a href="" target="_blank">Matrix</a></button>
-                <button><a href="" target="_blank">Reading List</a></button>
-                <button><a href="" target="_blank">Background Guide</a></button>
+                <button class="btn-1"><a href="" target="_blank">Matrix</a></button>
+                <button class="btn-2"><a href="" target="_blank">Reading List</a></button>
+                <button class="btn-3"><a href="" target="_blank">Background Guide</a></button>
             </div>
         </div>
     </section>
-
-
     <footer>
         <section class="testimonial-style-one sec-pad dark-gray-bg">
             </div>
@@ -100,29 +98,7 @@
     </footer>
 </body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
-<script>
-    VANTA.BIRDS({
-        el: "#main",
-        mouseControls: false,
-        touchControls: false,
-        gyroControls: false,
-        minHeight: 200.00,
-        minWidth: 200.00,
-        scale: 1.00,
-        scaleMobile: 1.00,
-        color1: 0x230a4,
-        color2: 0x41a6e1,
-        birdSize: 2.30,
-        wingSpan: 28.00,
-        speedLimit: 2.00,
-        separation: 95.00,
-        alignment: 21.00,
-        cohesion: 40.00,
-        quantity: 3.00
-    })
-</script>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="js/responsive.js"></script>
