--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <a href="#committees">Commmittees <span class="fa fa-angle-down"></span></a>
             <div class="dropdown-container">
               <a href="UNHRC.html">UNHRC</a>
-              <a href="csoon.html">UNHSC</a>
-              <a href="csoon.html">AIPPM</a>
+              <a href="UNHSC.html">UNHSC</a>
+              <a href="AIIPM.html">AIPPM</a>
               <a href="AFET.html">AFET</a>
               <a href="CIA.html">CIA Crisis Committee</a>
             </div>
@@ -324,8 +324,8 @@
           </li>
 
           <li class="card">
-            <a class="card-image c2" href="csoon.html" target="_blank"> </a>
-            <a class="card-description" href="csoon.html" target="_blank">
+            <a class="card-image c2" href="UNHSC.html" target="_blank"> </a>
+            <a class="card-description" href="UNHSC.html" target="_blank">
               <h2>UNHSC</h2>
               <p>Response to the Israeli Invasion of Lebanon in 1982</p>
 
@@ -333,8 +333,8 @@
           </li>
 
           <li class="card">
-            <a class="card-image c3" href="csoon.html" target="_blank"> </a>
-            <a class="card-description" href="csoon.html" target="_blank">
+            <a class="card-image c3" href="AIIPM.html" target="_blank"> </a>
+            <a class="card-description" href="AIIPM.html" target="_blank">
               <h2>AIPPM</h2>
               <p>Implementation of Hindi as the National Language</p>
             </a>
