--- a/UNHSC.html
+++ b/UNHSC.html
@@ -26,8 +26,8 @@
                         <a href="#committees">Commmittees <span class="fa fa-angle-down"></span></a>
                         <div class="dropdown-container">
                             <a href="UNHRC.html">UNHRC</a>
-                            <a href="csoon.html">UNHSC</a>
-                            <a href="csoon.html">AIPPM</a>
+                            <a href="UNHSC.html">UNHSC</a>
+                            <a href="AIIPM.html">AIPPM</a>
                             <a href="AFET.html">AFET</a>
                             <a href="CIA.html">CIA Crisis Committee</a>
                         </div>
