Committee Page Updated

--- a/UNHRC.html
+++ b/UNHRC.html
@@ -2,100 +2,101 @@
 <html lang="en" dir="ltr">
 
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/master.css">
-    <link rel="stylesheet" href="css/committees.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>UNHRC</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/master.css">
+  <link rel="stylesheet" href="css/committees.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>UNHRC</title>
 </head>
 
 <body>
-    <nav>
-        <section id="navbar" class="section">
-          <div class="navbar">
-            <div class="navbar-container flex-container logo-container">
-              <div class="logo">
+  <nav>
+    <section id="navbar" class="section">
+      <div class="navbar">
+        <div class="navbar-container flex-container logo-container">
+          <div class="logo">
             <img src="https://i.imgur.com/2kAWdiX.png" alt="">
-              </div>
-            </div>
-            <div class="navbar-container flex-container link-container">
-              <div class="nav-link"><a href="index.html">Home</a></div>
-              <div class="nav-link"><a href="index.html">Schedule</a></div>
-              <div class="nav-link dropdown active">
-                <a href="#committees">Commmittees <span class="fa fa-angle-down"></span></a>
-                <div class="dropdown-container">
-                  <a href="UNHRC.html">UNHRC</a>
-                  <a href="UNHSC.html">UNHSC</a>
-                  <a href="AIIPM.html">AIPPM</a>
-                  <a href="AFET.html">AFET</a>
-                  <a href="CIA.html">CIA Crisis Committee</a>
-                </div>
-              </div>
-              <div class="nav-link"><a href="index.html">Fourth Estate</a></div>
-              <div class="nav-link"><a href="csoon.html">Secretariat</a></div>
-              <div class="nav-link"><a href="csoon.html">Registration</a></div>
-            </div>
-            <div class="responsive-navbar">
-              <i class="fa fa-bars"></i>
+          </div>
+        </div>
+        <div class="navbar-container flex-container link-container">
+          <div class="nav-link"><a href="index.html">Home</a></div>
+          <div class="nav-link"><a href="index.html">Schedule</a></div>
+          <div class="nav-link dropdown active">
+            <a href="#committees">Commmittees <span class="fa fa-angle-down"></span></a>
+            <div class="dropdown-container">
+              <a href="UNHRC.html">UNHRC</a>
+              <a href="UNHSC.html">UNHSC</a>
+              <a href="AIIPM.html">AIPPM</a>
+              <a href="AFET.html">AFET</a>
+              <a href="CIA.html">CIA Crisis Committee</a>
             </div>
           </div>
-        </section>
-      </nav>
-      <div class="rnavbar-container">
-        <div class="rlink-container">
-          <div class="rnav-link"><a href="index.html">Home</a></div>
-          <div class="rnav-link"><a href="index.html">Schedule</a></div>
-          <div class="rnav-link"><a href="index.html">About</a></div>
-          <div class="rnav-link"><a href="index.html">Committees</a></div>
-          <div class="rnav-link"><a href="index.html">Fourth Estate</a></div>
+          <div class="nav-link"><a href="index.html">Fourth Estate</a></div>
+          <div class="nav-link"><a href="csoon.html">Secretariat</a></div>
+          <div class="nav-link"><a href="csoon.html">Registration</a></div>
         </div>
+        <div class="responsive-navbar">
+          <i class="fa fa-bars"></i>
+        </div>
+      </div>
+    </section>
+  </nav>
+  <div class="rnavbar-container">
+    <div class="rlink-container">
+      <div class="rnav-link"><a href="index.html">Home</a></div>
+      <div class="rnav-link"><a href="index.html">Schedule</a></div>
+      <div class="rnav-link"><a href="index.html">About</a></div>
+      <div class="rnav-link"><a href="index.html">Committees</a></div>
+      <div class="rnav-link"><a href="index.html">Fourth Estate</a></div>
+    </div>
+  </div>
+
+
+  <header>
+    <div class="special-heading-container" id="main">
+      <img src="./assets/Logo_UNHRC.JPG" class="com-logo" alt="UNHRC">
+      <p class="main-headingB">UNHRC</p>
+      <p class="main-subheading blue">United Nations Human Rights Council</p>
+    </div>
+
+  </header>
+
+  <section id="text">
+    <div class="info-container">
+      <div class="text-container">
+        <div class="heading-container">
+          <span class="common-heading">Agenda</span>
+        </div>
+        <p>
+          <b>The Ethics of Intervention with a Special Emphasis on Military Intervention</b>
+        </p>
+        <br>
+        <p>
+          This committee will deliberate the ethical implications of external powers
+          intervening in national conflicts. The rationale of intervention, thereby
+          directly contravening state sovereignty, has often been on the basis of human
+          rights. The committee will deliberate on the nature and impact of
+          interventions by the international community.
+        </p>
       </div>
 
 
-    <header>
-        <div class="special-heading-container" id="main">
-            <img src="./assets/Logo_UNHRC.JPG" class="com-logo" alt="UNHRC">
-            <p class="main-headingB">UNHRC</p>
-            <p class="main-subheading blue">United Nations Human Rights Council</p>
+      <div class="text-container common-button">
+        <div class="heading-container">
+          <span class="common-heading">Resources</span>
         </div>
-
-    </header>
-
-    <section id="text">
-        <div class="info-container">
-            <div class="text-container">
-                <div class="heading-container">
-                    <span class="common-heading">Agenda</span>
-                </div>
-                <p>
-                    <b>The Ethics of Intervention with Special Emphasis on Military Intervention</b>
-                </p>
-                <br>
-                <p>
-                    This committee will deliberate the ethical implications of external powers intervening in national
-                    conflicts. The rationale of intervention, thereby directly contravening state sovereignty, has often
-                    been on the basis of human rights. The committee will deliberate on the nature and impact of
-                    interventions by the international community.
-                </p>
-            </div>
-            
-        
-            <div class="text-container common-button">
-                <div class="heading-container">
-                    <span class="common-heading">Resources</span>
-                </div>
-                <button class="btn-1"><a href="" target="_blank">Matrix</a></button>
-                <button class="btn-2"><a href="" target="_blank">Reading List</a></button>
-                <button class="btn-3"><a href="" target="_blank">Background Guide</a></button>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <section class="testimonial-style-one sec-pad dark-gray-bg">
-            </div>
-            <h3>Website made by Aabir Fauzan, Arjun Suri, and Anhad Ajit Singh Beri</h3>
-    </footer>
+        <button class="btn-1"><a href="" target="_blank">Matrix</a></button>
+        <button class="btn-2"><a href="" target="_blank">Reading List</a></button>
+        <button class="btn-3"><a href="" target="_blank">Background Guide</a></button>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <section class="testimonial-style-one sec-pad dark-gray-bg">
+      </div>
+      <h3>Website made by Aabir Fauzan, Arjun Suri, and Anhad Ajit Singh Beri</h3>
+  </footer>
 </body>
 
 
